// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Identity Default 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="row no-gutters"
    >
      <div
        class="col col-2"
      >
        <span
          class="text-center v-chip v-chip--no-color v-chip--outlined theme--light v-size--default"
          tile=""
        >
          <span
            class="v-chip__content"
          >
            
      10f546
    
          </span>
        </span>
      </div>
       
      <div
        class="ma-2 text-center col"
      >
        <span>
          Tom Marvolo Riddle
        </span>
      </div>
       
      <div
        class="ma-2 text-center col"
      >
        <span>
          triddle@example.net
        </span>
      </div>
       
      <div
        class="ma-2 text-center col"
      >
        <span>
          triddle
        </span>
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots Identity Source 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="row no-gutters"
    >
      <div
        class="col col-2"
      >
        <span
          class="text-center v-chip v-chip--no-color v-chip--outlined theme--light v-size--default"
          tile=""
        >
          <span
            class="v-chip__content"
          >
            
      10f546
    
          </span>
        </span>
      </div>
       
      <div
        class="ma-2 text-center col"
      >
        <span>
          Tom Marvolo Riddle
        </span>
      </div>
       
      <div
        class="ma-2 text-center col"
      >
        <span>
          triddle@example.net
        </span>
      </div>
       
      <div
        class="ma-2 text-center col"
      >
        <span>
          triddle
        </span>
      </div>
       
      <div
        class="ma-2 text-center col"
      >
        <span>
          github
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualCard Default 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="mx-auto v-card v-card--raised v-sheet theme--light"
    >
      <div
        class="grow v-list-item theme--light"
        tabindex="-1"
      >
        <div
          class="v-avatar v-list-item__avatar grey"
          style="height: 40px; min-width: 40px; width: 40px;"
        >
          
      TR
    
        </div>
         
        <div
          class="v-list-item__content"
        >
          <div
            class="v-list-item__title"
          >
            Tom Marvolo Riddle
          </div>
        </div>
      </div>
       
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualCard Single Initial 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="mx-auto v-card v-card--raised v-sheet theme--light"
    >
      <div
        class="grow v-list-item theme--light"
        tabindex="-1"
      >
        <div
          class="v-avatar v-list-item__avatar grey"
          style="height: 40px; min-width: 40px; width: 40px;"
        >
          
      V
    
        </div>
         
        <div
          class="v-list-item__content"
        >
          <div
            class="v-list-item__title"
          >
            Voldemort
          </div>
        </div>
      </div>
       
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualsGrid Default 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="mx-auto v-card v-sheet theme--light"
      style="max-width: 750px;"
    >
      <div
        class="container container--fluid"
      >
        <div
          class="row row--dense"
        >
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--raised v-sheet theme--light"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      TR
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Tom Marvolo Riddle
                  </div>
                </div>
              </div>
               
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--raised v-sheet theme--light"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      HP
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Harry Potter
                  </div>
                </div>
              </div>
               
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--raised v-sheet theme--light"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      V
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Voldemort
                  </div>
                </div>
              </div>
               
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--raised v-sheet theme--light"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      HG
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Hermione Granger
                  </div>
                </div>
              </div>
               
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--raised v-sheet theme--light"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      AD
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Ambus Dumbledore
                  </div>
                </div>
              </div>
               
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--raised v-sheet theme--light"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      RW
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Ron Weasley
                  </div>
                </div>
              </div>
               
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--raised v-sheet theme--light"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      SS
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Severus Snape
                  </div>
                </div>
              </div>
               
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--raised v-sheet theme--light"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      H
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Hagrid
                  </div>
                </div>
              </div>
               
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualsGrid Empty 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="mx-auto v-card v-sheet theme--light"
      style="max-width: 750px;"
    >
      <div
        class="v-card__text"
      >
        No individuals found
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ProfileCard Default 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="mx-auto v-card v-card--raised v-sheet theme--light"
      style="width: 600px;"
    >
      <div
        class="grow v-list-item theme--light"
        tabindex="-1"
      >
        <div
          class="v-avatar v-list-item__avatar grey"
          style="height: 40px; min-width: 40px; width: 40px;"
        >
          
      TR
    
        </div>
         
        <div
          class="v-list-item__content"
        >
          <div
            class="v-list-item__title"
          >
            Tom Marvolo Riddle
          </div>
        </div>
      </div>
       
      <div
        class="v-subheader theme--light"
      >
        Identities
      </div>
       
      <div
        class="v-list-group v-list-group--active primary--text"
      >
        <div
          aria-expanded="true"
          class="v-list-group__header v-list-item v-list-item--active v-list-item--link theme--light"
          role="button"
          tabindex="0"
        >
          <div
            class="v-list-item__icon v-list-group__header__prepend-icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-github theme--light"
            />
          </div>
          <div
            class="v-list-item__content"
          >
            <div
              class="v-list-item__title"
            >
              GitHub
            </div>
          </div>
          <div
            class="v-list-item__icon v-list-group__header__append-icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-chevron-down theme--light"
            />
          </div>
        </div>
        <div
          class="v-list-group__items"
        >
           
          <div
            class="v-list-item v-list-item--link theme--light"
            tabindex="0"
          >
            <div
              class="v-list-item__content"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col col-2"
                >
                  <span
                    class="text-center v-chip v-chip--no-color v-chip--outlined theme--light v-size--default"
                    tile=""
                  >
                    <span
                      class="v-chip__content"
                    >
                      
      006afa
    
                    </span>
                  </span>
                </div>
                 
                <div
                  class="ma-2 text-center col"
                >
                  <span>
                    Tom Marvolo Riddle
                  </span>
                </div>
                 
                <div
                  class="ma-2 text-center col"
                >
                  <span>
                    triddle@example.net
                  </span>
                </div>
                 
                <div
                  class="ma-2 text-center col"
                >
                  <span>
                    triddle
                  </span>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
          <div
            class="v-list-item v-list-item--link theme--light"
            tabindex="0"
          >
            <div
              class="v-list-item__content"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col col-2"
                >
                  <span
                    class="text-center v-chip v-chip--no-color v-chip--outlined theme--light v-size--default"
                    tile=""
                  >
                    <span
                      class="v-chip__content"
                    >
                      
      808b18
    
                    </span>
                  </span>
                </div>
                 
                <div
                  class="ma-2 text-center col"
                >
                  <span>
                    Voldemort
                  </span>
                </div>
                 
                <div
                  class="ma-2 text-center col"
                >
                  <span>
                    -
                  </span>
                </div>
                 
                <div
                  class="ma-2 text-center col"
                >
                  <span>
                    voldemort
                  </span>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-group v-list-group--active primary--text"
      >
        <div
          aria-expanded="true"
          class="v-list-group__header v-list-item v-list-item--active v-list-item--link theme--light"
          role="button"
          tabindex="0"
        >
          <div
            class="v-list-item__icon v-list-group__header__prepend-icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-git theme--light"
            />
          </div>
          <div
            class="v-list-item__content"
          >
            <div
              class="v-list-item__title"
            >
              Git
            </div>
          </div>
          <div
            class="v-list-item__icon v-list-group__header__append-icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-chevron-down theme--light"
            />
          </div>
        </div>
        <div
          class="v-list-group__items"
        >
           
          <div
            class="v-list-item v-list-item--link theme--light"
            tabindex="0"
          >
            <div
              class="v-list-item__content"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col col-2"
                >
                  <span
                    class="text-center v-chip v-chip--no-color v-chip--outlined theme--light v-size--default"
                    tile=""
                  >
                    <span
                      class="v-chip__content"
                    >
                      
      abce32
    
                    </span>
                  </span>
                </div>
                 
                <div
                  class="ma-2 text-center col"
                >
                  <span>
                    voldemort
                  </span>
                </div>
                 
                <div
                  class="ma-2 text-center col"
                >
                  <span>
                    voldemort@example.net
                  </span>
                </div>
                 
                <div
                  class="ma-2 text-center col"
                >
                  <span>
                    voldemort
                  </span>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-group v-list-group--active primary--text"
      >
        <div
          aria-expanded="true"
          class="v-list-group__header v-list-item v-list-item--active v-list-item--link theme--light"
          role="button"
          tabindex="0"
        >
          <div
            class="v-list-item__icon v-list-group__header__prepend-icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-account-multiple theme--light"
            />
          </div>
          <div
            class="v-list-item__content"
          >
            <div
              class="v-list-item__title"
            >
              Others
            </div>
          </div>
          <div
            class="v-list-item__icon v-list-group__header__append-icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-chevron-down theme--light"
            />
          </div>
        </div>
        <div
          class="v-list-group__items"
        >
           
          <div
            class="v-list-item v-list-item--link theme--light"
            tabindex="0"
          >
            <div
              class="v-list-item__content"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col col-2"
                >
                  <span
                    class="text-center v-chip v-chip--no-color v-chip--outlined theme--light v-size--default"
                    tile=""
                  >
                    <span
                      class="v-chip__content"
                    >
                      
      4ce562
    
                    </span>
                  </span>
                </div>
                 
                <div
                  class="ma-2 text-center col"
                >
                  <span>
                    -
                  </span>
                </div>
                 
                <div
                  class="ma-2 text-center col"
                >
                  <span>
                    -
                  </span>
                </div>
                 
                <div
                  class="ma-2 text-center col"
                >
                  <span>
                    voldemort
                  </span>
                </div>
                 
                <div
                  class="ma-2 text-center col"
                >
                  <span>
                    irc
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="v-subheader theme--light"
      >
        Organizations (2)
      </div>
       
      <div
        class="v-list v-sheet v-sheet--tile theme--light"
        role="list"
      >
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__content"
          >
            <div
              class="row no-gutters"
            >
              <div
                class="ma-2 text-center col"
              >
                <span>
                  Hogwarts School of Witchcraft and Wizardry
                </span>
              </div>
               
              <div
                class="col-3 ma-2 text-center col"
              >
                <span>
                  1938-09-01
                </span>
              </div>
               
              <div
                class="col-3 ma-2 text-center col"
              >
                <span>
                  1945-06-02
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__content"
          >
            <div
              class="row no-gutters"
            >
              <div
                class="ma-2 text-center col"
              >
                <span>
                  Slytherin House
                </span>
              </div>
               
              <div
                class="col-3 ma-2 text-center col"
              >
                <span>
                  1938-09-01
                </span>
              </div>
               
              <div
                class="col-3 ma-2 text-center col"
              >
                <span>
                  1998-05-02
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
